--- a/frontend-frota/src/styles.css
+++ b/frontend-frota/src/styles.css
@@ -127,3 +127,31 @@ body {
   margin: 5px 0;
   font-size: 16px;
 }
+
+
+
+
+
+/* Estilos gerais para centralizar e embelezar a página */
+.page-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  text-align: center;
+  
+  min-height: 100vh;
+}
+
+.page-title {
+  font-size: 2.5rem;
+  color: #333;
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+
+/* Estilos adicionais para os componentes (opcional) */
+.DriverForm, .DriverList {
+  margin-bottom: 20px;
+}
